...
                    : Colors.transparent,
                borderRadius: const BorderRadius.horizontal(
                  left: Radius.circular(15),
                ),
              ),
              child: Text(
                'BY MONTH',
                style: AppTextStyles.buttonTertiary.copyWith(
                  color: _isMonthView 
                      ? AppColors.cream 
                      : Theme.of(context).colorScheme.onSurface,
                  fontSize: 12,
                ),
...
                    : Colors.transparent,
                borderRadius: const BorderRadius.horizontal(
                  right: Radius.circular(15),
                ),
              ),
              child: Text(
                'BY WEEK',
                style: AppTextStyles.buttonTertiary.copyWith(
                  color: !_isMonthView 
                      ? AppColors.cream 
                      : Theme.of(context).colorScheme.onSurface,
                  fontSize: 12,
                ),
...
  Widget _buildUpcomingEvents(BuildContext context) {
    return Column(
      crossAxisAlignment: CrossAxisAlignment.start,
      children: [
        // Section header
        Text(
          'Upcoming Events',
          style: AppTextStyles.sectionTitle.copyWith(
            color: Theme.of(context).colorScheme.onSurface,
          ),
        ),
        
        const SizedBox(height: AppSpacing.md),
...
